Revise title and add meta tags in index.html
Updated title and added meta tags for SEO.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head><title>Profesyonel Web Sitesi Yapımı | Kenan Şahin</title>
+<head><title><title>Kenan Şahin | Kişisel Web Sitesi</title>
+<meta name="description" content="Kenan Şahin kişisel web sitesi. İletişim, WhatsApp ve telefon bilgileri.">
+<meta name="keywords" content="Kenan Şahin, kişisel site, iletişim">
+<meta name="author" content="Kenan Şahin"></title>
 <meta name="description" content="Uygun fiyatlı, mobil uyumlu ve profesyonel web sitesi yapımı. WhatsApp ile hemen iletişime geçin.">
 
 <meta name="keywords" content="web sitesi yapımı, uygun fiyatlı web sitesi, mobil uyumlu site">
